--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-hello world
-this the changes that I'm making 
+!doctype <!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <p>Hello world</p>
+    <p>this is the change I made</p>
+  </body>
+</html>
