--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+!doctype <!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>this is the title </title>
+  </head>
+  <body>
+    <p>Hello world</p>
+    <p>this is the change I made</p>
+  </body>
+</html>
