--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>Hello world</p>
-    <p>this is the change I made</p>
+    <p>some new features</p>
     <br>
       <button onclick="displaycount()">click to count</button>
       <p id="carrier">0</p>
