--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       function myfunction (){
         return counter++;
       }
+      if (counter ==3){
+    document.getElementById('counter').style.color="red";
+    }
     </script>
   </body>
 </html>
