--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
   <body>
     <button onclick="document.getElementById('counter').innerHTML= myfunction()">click me</button>
     <p id="counter"></p>
-    <script type="text/javascript">
-      var counter = 0
-      function myfunction (){
-        return counter++;
-      }
-      if (counter ==3){
-    document.getElementById('counter').style.color="red";
-    }
-    </script>
+    <script src="myscript.js"></script>
+
   </body>
 </html>
