--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>counting button</title>
-  </head>
-  <body>
-    <button onclick="document.getElementById('counter').innerHTML= myfunction()">click me</button>
-    <p id="counter"></p>
-    <script src="myscript.js"></script>
+<html>
+<body>
+<button onclick = myfunction()>click here to count</button>
+<p id ="counter"></p>
+<script src="counter.js"></script>
 
-  </body>
+
+</body>
+
 </html>
