--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <body>
 <button onclick = myfunction()>click here to count</button>
 <p id ="counter"></p>
-<script src="counter.js"></script>
-
+<script src="myscript.js"></script>
 
 </body>
 
