--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <button onclick = myfunction()>click here to count</button>
-<p id ="counter"></p>
+<p id ="counter" style="font-size:80px;"></p>
 <script src="myscript.js"></script>
 
 </body>
