commit all files

--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
-!doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>this is the title </title>
+    <title>the best counter</title>
+    <script src="scripts\myscript.js"></script>
   </head>
   <body>
-    <p>Hello world</p>
-    <p>this is the change I made</p>
     <br>
-      <button onclick="displaycount()">click to count</button>
-      <p id="carrier">0</p>
+      <button onclick="myfunction()">click to count</button>
+      <p id="counter">0</p>
     </body>
-  <script>
-
-  var count=(function() {
-    var counter=0;
-    return function (){return counter +=1;}
-  })();
-    function displaycount(){
-      document.getElementById('carrier').innerHTML=count();
-    }
-  </script>
 </html>
