--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>the best counter</title>
-    <script src="scripts\myscript.js"></script>
+    <title>memoryCards</title>
+    <script src="js\myscript.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css\mystyle.css">
   </head>
   <body>
-    <br>
-      <button onclick="myfunction()">click to count</button>
-      <p id="counter">0</p>
-    </body>
+    <div class="split left">
+  <div class="centered">
+    <img id="A"src="images\A.png" alt="images\A.png" onclick="replace1()">
+    <img id="B"src="images\B.png" alt="images\B.png" onclick="replace2()">
+    <img id="C"src="images\C.png" alt="images\C.png" onclick="replace3()">
+    <img id="D"src="images\D.png" alt="images\D.png" onclick="replace4()">
+    <img id="E"src="images\E.png" alt="images\E.png" onclick="replace5()">
+    <img id="F"src="images\F.png" alt="images\F.png" onclick="replace6()">
+    <img id="G"src="images\G.png" alt="images\G.png" onclick="replace7()">
+    <img id="H"src="images\H.png" alt="images\H.png" onclick="replace8()">
+    <img id="I"src="images\I.png" alt="images\I.png" onclick="replace9()">
+    <img id="J"src="images\J.png" alt="images\J.png" onclick="replace10()">
+    <img id="K"src="images\K.png" alt="images\K.png" onclick="replace11()">
+    <img id="L"src="images\L.png" alt="images\L.png" onclick="replace12()">
+  </div>
+</div>
+
+<div class="split right">
+  <div class="centered">
+    <img id="a" src="images\one.png" alt="images\one.png" onclick="replace13()">
+    <img id="b" src="images\two.png" alt="images\two.png" onclick="replace14()">
+    <img id="c" src="images\three.png" alt="images\three.png" onclick="replace15()">
+    <img id="d" src="images\four.png" alt="images\four.png" onclick="replace16()">
+    <img id="e" src="images\five.png" alt="images\five.png" onclick="replace17()">
+    <img id="f" src="images\six.png" alt="images\six.png" onclick="replace18()">
+    <img id="g" src="images\seven.png" alt="images\seven.png" onclick="replace19()">
+    <img id="h" src="images\eight.png" alt="images\eight.png" onclick="replace20()">
+    <img id="i"  src="images\nine.png" alt="images\nine.png" onclick="replace21()">
+    <img id="j" src="images\ten.png" alt="images\ten.png" onclick="replace22()">
+    <img id="k" src="images\eleven.png" alt="images\eleven.png" onclick="replace23()">
+    <img id="l" src="images\twelve.png" alt="images\twelve.png" onclick="replace24()">
+  </div>
+</div>
+  </body>
 </html>
